2008-05-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/prefs.c:
   Use gtk_window_present() instead of gtk_widget_show() for Open File
   and Preferences dialog.


2008-05-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/prefs.c, src/callbacks.c, src/callbacks.h,
   src/keyfile.c, src/document.c, src/document.h, src/editor.c,
   src/editor.h, src/ui_utils.c, geany.glade, TODO, doc/geany.txt,
   doc/geany.html:
   Add basic Line Breaking option in the Document menu. Line breaking
   only works when typing characters past the line breaking column
   number.
   Add 'Line breaking column' editor pref.
 * src/callbacks.c, src/callbacks.h, src/interface.c, src/keyfile.c,
   src/main.c, src/ui_utils.c, geany.glade:
   Rename old uses of line breaking -> line wrapping. This includes the
   keyfile pref, so any users with this enabled will have to reset it.
 * doc/geany.txt, doc/geany.html:
   Update Code Navigation section for build errors and message items.
   Correct Load Tags menu item being in the Tools menu now.
   Document 'Disk check timeout' pref.
 * src/plugindata.h:
   Update api_version for new line breaking struct fields.
 * src/filetypes.c:
   Set filetype::id automatically in filetype_add().
 * src/filetypes.c:
   Add source_only argument for filetypes_find_source() and rename.


2008-05-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Fix C headers getting detected as C++ files (iterate through
   filetypes_array, not filetypes_hash as the order is not consistent
   with the filetype_id enum).
   Add static function filetypes_find_source().


2008-05-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/build.c, src/utils.c, src/win32.c,
   src/highlighting.c, src/dialogs.c, src/plugindata.h,
   src/msgwindow.c, src/keyfile.c, src/keyfile.h, src/filetypes.c,